--- a/package.json
+++ b/package.json
@@ -14,16 +14,26 @@
   "author": "Edwin Luo",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.700.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^5.2.0",
     "config": "^3.3.1",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "filepond": "^4.16.0",
+    "filepond-plugin-file-encode": "^2.1.6",
+    "filepond-plugin-image-preview": "^4.6.4",
+    "filepond-plugin-image-resize": "^2.0.7",
+    "filepond-plugin-image-transform": "^3.7.3",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.12"
+    "method-override": "^3.0.0",
+    "mongoose": "^5.9.12",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.1.0",
+    "multer-s3": "^2.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
   }
 }
-
-
