--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mongoose": "^5.9.12",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.1.0",
-    "multer-s3": "^2.9.0"
+    "multer-s3": "^2.9.0",
+    "websocket-extensions": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
