--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-focus-lock": "^2.4.0",
     "react-h5-audio-player": "^3.2.0",
     "react-jinke-music-player": "^4.15.1",
+    "react-mic": "^12.4.6",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-sticky-footer": "0.1.0-rc3",
