--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,10 @@
     "react-mic": "^12.4.6",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "react-sortable-pane": "^1.1.0",
     "react-sticky-footer": "0.1.0-rc3",
     "react-transition-group": "^4.4.1",
+    "react-ui-cards": "^2.0.0",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
