--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-h5-audio-player": "^3.2.0",
     "react-jinke-music-player": "^4.15.1",
     "react-mic": "^12.4.6",
+    "react-popup": "^0.10.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-sortable-pane": "^1.1.0",
