--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "filepond-plugin-file-validate-type": "^1.2.5",
     "filepond-plugin-image-resize": "^2.0.7",
     "filepond-plugin-image-transform": "^3.7.3",
+    "locomotive-scroll": "^3.5.4",
     "react": "^16.13.1",
     "react-audio-player": "^0.13.0",
     "react-dom": "^16.13.1",
@@ -34,6 +35,7 @@
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "simplebar-react": "^2.2.1",
     "uuid": "^8.1.0",
     "websocket-extensions": "^0.1.4"
   },
