--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "locomotive-scroll": "^3.5.4",
     "react": "^16.13.1",
     "react-audio-player": "^0.13.0",
+    "react-autosize-textarea": "^7.1.0",
     "react-dom": "^16.13.1",
     "react-filepond": "^7.0.1",
     "react-h5-audio-player": "^3.2.0",
