--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "client-install": "npm install --prefix client"
+    "client-install": "npm install --prefix client",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Edwin Luo",
   "license": "ISC",
@@ -25,7 +26,6 @@
     "filepond-plugin-image-preview": "^4.6.4",
     "filepond-plugin-image-resize": "^2.0.7",
     "filepond-plugin-image-transform": "^3.7.3",
-    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.12",
