--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "concurrently": "^5.2.0",
     "config": "^3.3.1",
     "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "filepond": "^4.16.0",
     "filepond-plugin-file-encode": "^2.1.6",
